--- a/scss/main.css
+++ b/scss/main.css
@@ -4,29 +4,40 @@
 body {
   font-family: "Montserrat", sans-serif; }
 
-@media (max-width: 1300px) {
-  .hero {
-    width: 100%;
-    height: 30em;
-    overflow: hidden; }
-    .hero img {
-      width: 100%; }
-    .hero input {
-      position: absolute;
-      border: 1px solid #000;
-      background: transparent;
-      padding: .5em 4em;
-      border-radius: 10px;
-      top: 45%;
-      right: 207px;
-      z-index: 1; }
+#container {
+  width: 75%;
+  margin: auto; }
 
-  .wrapper {
+@media (min-width: 960px) {
+  div.hero {
+    background: url(../img/heroImage.jpg) 0 0 no-repeat;
+    padding-top: 35%;
+    height: 12em;
+    background-size: cover; }
+    div.hero img {
+      width: 100%; }
+
+  input {
+    position: absolute;
+    border: 1px solid #000;
+    background: transparent;
+    padding: .3em 1.4em;
+    border-radius: 10px;
+    top: 25%;
+    right: 10px;
+    z-index: 1; }
+
+  input:hover {
+    color: #eee;
+    background-color: #000; }
+
+  #container {
     width: 75%;
     margin: auto; } }
-@media (max-width: 768px) {
+@media (min-width: 600px) {
   .hero input {
-    right: 75px; }
+    right: 75px;
+    top: 500px; }
 
   .wrapper {
     width: 75%;
@@ -40,51 +51,76 @@ header {
   width: 80%;
   margin: auto; }
 
-@media (max-width: 1300px) {
+@media (min-width: 960px) {
   .logo {
     height: 114px;
-    width: 12%;
-    float: left; }
+    width: 15%;
+    float: left;
+    display: block; }
     .logo img {
       padding: .7em;
       width: 100%; }
+
+  .fa-shopping-cart {
+    text-align: center; }
+
+  header {
+    height: 100px; }
+    header span {
+      float: right;
+      padding: 2em 1em; }
 
   .center {
     width: 35%;
     float: right;
     height: 114.4px; }
-    .center .mainMenu {
-      display: table-cell;
-      vertical-align: middle;
-      width: 100%;
-      padding: 3em 0; }
-      .center .mainMenu li {
-        float: left;
-        list-style-type: none;
-        font-size: .84em; }
-        .center .mainMenu li a {
-          text-decoration: none;
-          color: #000;
-          padding: .9em 1em .2em .9em;
-          margin-right: .5em; }
-        .center .mainMenu li a:hover {
-          border-bottom: 1px solid #000; }
-        .center .mainMenu li a.active {
-          border-bottom: 1px solid #999; } }
-@media (max-width: 768px) {
-  .logo {
-    height: 114px;
-    width: 16%;
-    float: left; }
-    .logo img {
-      padding: 1em;
-      width: 100%; }
 
-  .center {
-    width: 60%;
-    float: right;
-    height: 114.4px; }
-    .center .mainMenu {
-      display: table-cell;
-      vertical-align: middle;
-      padding: 3em 0; } }
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px; }
+    .sidenav a {
+      padding: 1em 8px 1em 8px;
+      text-decoration: none;
+      font-size: 80%;
+      font-size: 80%;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
+      color: #000; }
+
+  .closebtn:hover {
+    border: none; }
+
+  a:hover {
+    border-bottom: 1px solid #000; }
+
+  a.active {
+    border-bottom: 1px solid #000; }
+    a.active .closebtn {
+      position: absolute;
+      top: 0;
+      right: 18%;
+      font-size: 36px;
+      margin-left: 50px;
+      border-bottom: none; }
+
+  .sidenav {
+    padding-top: 15px; }
+
+  .sidenav a {
+    font-size: 18px; } }
+@media (min-width: 600px) {
+  header {
+    width: 80%;
+    margin: auto; }
+
+  .logo img {
+    width: 100%; } }
