--- a/scss/main.css
+++ b/scss/main.css
@@ -1,90 +1,56 @@
-/* variables css*/
-/* CSS Document */
-/* CSS Document */
-body {
-  font-family: "Montserrat", sans-serif; }
+/*
+Error: File to import not found or unreadable: mixins.scss.
+       Load path: /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss
+        on line 8 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss
 
-@media (max-width: 1300px) {
-  .hero {
-    width: 100%;
-    height: 30em;
-    overflow: hidden; }
-    .hero img {
-      width: 100%; }
-    .hero input {
-      position: absolute;
-      border: 1px solid #000;
-      background: transparent;
-      padding: .5em 4em;
-      border-radius: 10px;
-      top: 45%;
-      right: 207px;
-      z-index: 1; }
+3: @import 'assets/variables.scss';
+4: @import 'assets/header.scss';
+5: @import 'assets/body.scss';
+6: 
+7: /* partials *\/
+8: @import 'mixins.scss';
+9: 
+10: /* site *\/
+11: @import 'site.scss';
+12: @import 'home.scss';
 
-  .wrapper {
-    width: 75%;
-    margin: auto; } }
-@media (max-width: 768px) {
-  .hero input {
-    right: 75px; }
-
-  .wrapper {
-    width: 75%;
-    margin: auto; } }
-.keepOpen {
-  clear: both; }
-
-/*header css*/
-/* CSS Document */
-header {
-  width: 80%;
-  margin: auto; }
-
-@media (max-width: 1300px) {
-  .logo {
-    height: 114px;
-    width: 12%;
-    float: left; }
-    .logo img {
-      padding: .7em;
-      width: 100%; }
-
-  .center {
-    width: 35%;
-    float: right;
-    height: 114.4px; }
-    .center .mainMenu {
-      display: table-cell;
-      vertical-align: middle;
-      width: 100%;
-      padding: 3em 0; }
-      .center .mainMenu li {
-        float: left;
-        list-style-type: none;
-        font-size: .84em; }
-        .center .mainMenu li a {
-          text-decoration: none;
-          color: #000;
-          padding: .9em 1em .2em .9em;
-          margin-right: .5em; }
-        .center .mainMenu li a:hover {
-          border-bottom: 1px solid #000; }
-        .center .mainMenu li a.active {
-          border-bottom: 1px solid #999; } }
-@media (max-width: 768px) {
-  .logo {
-    height: 114px;
-    width: 16%;
-    float: left; }
-    .logo img {
-      padding: 1em;
-      width: 100%; }
-
-  .center {
-    width: 60%;
-    float: right;
-    height: 114.4px; }
-    .center .mainMenu {
-      display: table-cell;
-      vertical-align: middle;
-      padding: 3em 0; } }
+Backtrace:
+/Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss:8
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/import_node.rb:45:in `import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:313:in `visit_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `map'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:159:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/engine.rb:298:in `render_with_sourcemap'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/sass_scss.rb:391:in `run'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/sass_scss.rb:63:in `process_result'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/base.rb:52:in `parse'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/base.rb:19:in `parse!'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/bin/sass:13:in `<top (required)>'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:18:in `load'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:18:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: mixins.scss.\A        Load path: /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss\A         on line 8 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss\A \A 3: @import 'assets/variables.scss';\A 4: @import 'assets/header.scss';\A 5: @import 'assets/body.scss';\A 6: \A 7: /* partials */\A 8: @import 'mixins.scss';\A 9: \A 10: /* site */\A 11: @import 'site.scss';\A 12: @import 'home.scss';"; }
