--- a/scss/site/_site.scss
+++ b/scss/site/_site.scss
@@ -1,10 +1,21 @@
 body {
-  background: $athens-gray;
-  font-family: $mainFont;
+  font-family: $font-stack;
 
   .wrapper {
     margin: 0 auto;
     width: 80%;
+  }
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:visited {
+      color: inherit;
+    }
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -18,4 +29,12 @@ body {
 .alignment {
 	margin: 0 auto;
 	padding: 0 45px;
+}
+
+.btn {
+  width: 110px;
+  text-align: center;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 10px;
 }
