--- a/scss/assets/_header.scss
+++ b/scss/assets/_header.scss
@@ -1,96 +1,138 @@
-/* CSS Document */
-header{
- width: 80%;
-margin: auto;
-}
-
-@include breakpoint(laptop){
 .logo{
 
-	height: 114px;
-	width: 12%;
+    height: 114px;
+    width: 15%;
 	float: left;
+    display: block;
 
-	img{
-		padding: .7em;
-		width: 100%;
-	}
-
+    
+    img{
+        
+        padding: .7em 1.5em;
+        width: 100%;
+    }
+    
 }
 
-
+.fa-shopping-cart{
+        text-align: center;
+    }
 .center{
-	width: 35%;
-	float: right;
-	height: 114.4px;
+    width: 35%;
+    float: right;
+    height: 114.4px;
+    }
 
 
-.mainMenu{
-	display: table-cell;
-	vertical-align: middle;
-	width: 100%;
-	padding: 3em 0;
+header{
+    height: 100px;
+    
+    span{
+        float: right;
+        padding: 1em 1em;
+        
+    }
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 3px;
+    right: 3px;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+
+
+ a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+ a:hover {
+    color: $main-color;
+}
+
+ .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+}
+
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 
 
 
-	li{
-		float: left;
-		list-style-type: none;
-		font-size: .84em;
+@include responsive(tabletM) {
+    header{
+        width: 80%;
+        margin: auto
+    }
+    .logo{
+        width: 12%;
+        img{
+        width:100%;
+        }
+    }
+	}
 
+@include responsive(laptopM) {
 
-
-		a{
-
-			text-decoration: none;
-			color: #000;
-			padding: .9em 1em .2em .9em;
-			margin-right: .5em;
-		} // and of anchor
-		a:hover{
-			border-bottom: 1px solid $main-color;
+	
+	header{
+		width: 70%;
+		span{
+			display: none;
 		}
-		a.active{
-			border-bottom: 1px solid $secondary-color;
-		}
-	} // end of list item
+	}
+	#mySidenav{
+		width: 0;
+	}
+	.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 3px;
+    right: 3px;
+    background-color: white;
+    //overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 
 
+ a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+   // display: block;
+	 float: left;
+    transition: 0.3s;
+}
 
-}// end main menu dif
-}//end center div
+ a:hover {
+    color: $main-color;
+}
+
+ .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+}
 
 }//end laptop breakpoint
-
- @include breakpoint(tablet) {
-
-	 .logo{
-
-	height: 114px;
-	width: 16%;
-	float: left;
-
-	img{
-		padding: 1em;
-		width: 100%;
-	}
-
-}
-
-
-.center{
-	width: 60%;
-	float: right;
-	height: 114.4px;
-
-
-	.mainMenu{
-	display: table-cell;
-	vertical-align: middle;
-	padding: 3em 0;
-
-
-	}
-
-}
-    }
