--- a/scss/assets/_header.scss
+++ b/scss/assets/_header.scss
@@ -14,9 +14,9 @@
     
 }
 
-.fa-shopping-cart{
-        text-align: center;
-    }
+
+
+       
 .center{
     width: 35%;
     float: right;
@@ -56,9 +56,6 @@ header{
     transition: 0.3s;
 }
 
- a:hover {
-    color: $main-color;
-}
 
  .closebtn {
     position: absolute;
@@ -93,45 +90,61 @@ header{
 	header{
 		width: 70%;
 		span{
+			display: none;
 			
 		}
 	}
 	#mySidenav{
-		width: 0;
+		float: right;
+
+	}
+	.floatNav{
+		float: right;
+		padding: 1em 2em;
 	}
 	.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
+    height: 70px;
+    width:60%;
     z-index: 1;
-    top: 3px;
+    top: -36px;
     right: 3px;
     background-color: white;
-    //overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.5s;
     padding-top: 60px;
 
 
- a {
+ a, a:visited {
+
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
    // display: block;
-	 float: left;
+	float: left;
     transition: 0.3s;
 }
 
  a:hover {
     color: $main-color;
 }
+	a.active {
+    color: $main-color;
+	text-decoration: underline;
+}
+		 a:hover i{
+    color: $main-color;
+}
+	a.active i {
+    color: $main-color;
+	text-decoration: underline;
+}
+
+
+	
 
  .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+    display: none;
 }
 }
 
