--- a/scss/style.css
+++ b/scss/style.css
@@ -9,9 +9,6 @@
     padding: .7em 1.5em;
     width: 100%; }
 
-.fa-shopping-cart {
-  text-align: center; }
-
 .center {
   width: 35%;
   float: right;
@@ -41,8 +38,6 @@ header {
     color: #818181;
     display: block;
     transition: 0.3s; }
-  .sidenav a:hover {
-    color: #000; }
   .sidenav .closebtn {
     position: absolute;
     top: 0;
@@ -68,21 +63,27 @@ header {
 @media only screen and (min-width: 960px) {
   header {
     width: 70%; }
+    header span {
+      display: none; }
 
   #mySidenav {
-    width: 0; }
+    float: right; }
+
+  .floatNav {
+    float: right;
+    padding: 1em 2em; }
 
   .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
+    height: 70px;
+    width: 60%;
     z-index: 1;
-    top: 3px;
+    top: -36px;
     right: 3px;
     background-color: white;
+    overflow-y: hidden;
     transition: 0.5s;
     padding-top: 60px; }
-    .sidenav a {
+    .sidenav a, .sidenav a:visited {
       padding: 8px 8px 8px 32px;
       text-decoration: none;
       font-size: 25px;
@@ -91,12 +92,16 @@ header {
       transition: 0.3s; }
     .sidenav a:hover {
       color: #000; }
+    .sidenav a.active {
+      color: #000;
+      text-decoration: underline; }
+    .sidenav a:hover i {
+      color: #000; }
+    .sidenav a.active i {
+      color: #000;
+      text-decoration: underline; }
     .sidenav .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px; } }
+      display: none; } }
 /* site */
 body {
   font-family: "Montserrat", sans-serif; }
