--- a/css/style.css
+++ b/css/style.css
@@ -1,183 +1,66 @@
-/* partials */
-/* assets */
-.logo {
-  height: 114px;
-  width: 15%;
-  float: left;
-  display: block; }
-  .logo img {
-    padding: .7em 1.5em;
-    width: 100%; }
+/*
+Error: Undefined mixin 'breakpoint'.
+        on line 13 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss, in `breakpoint'
+        from line 13 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss
+        from line 5 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss
 
-.center {
-  width: 35%;
-  float: right;
-  height: 114.4px; }
+8: @import 'partials/mixins.scss';
+9: 
+10: /* site *\/
+11: @import 'site/site.scss';
+12: @import 'site/home.scss';
 
-header {
-  height: 100px; }
-  header span {
-    float: right;
-    padding: 1em 1em; }
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 3px;
-  right: 3px;
-  background-color: white;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px; }
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s; }
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px; }
-
-.sidenav {
-  padding-top: 15px; }
-
-.sidenav a {
-  font-size: 18px; }
-
-@media only screen and (min-width: 600px) {
-  header {
-    width: 80%;
-    margin: auto; }
-
-  .logo {
-    width: 12%; }
-    .logo img {
-      width: 100%; } }
-@media only screen and (min-width: 960px) {
-  header {
-    width: 70%; }
-    header span {
-      display: none; }
-
-  #mySidenav {
-    float: right; }
-
-  .floatNav {
-    float: right;
-    padding: 1em 2em; }
-
-  .sidenav {
-    height: 70px;
-    width: 60%;
-    z-index: 1;
-    top: -36px;
-    right: 3px;
-    background-color: white;
-    overflow-y: hidden;
-    transition: 0.5s;
-    padding-top: 60px; }
-    .sidenav a, .sidenav a:visited {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      float: left;
-      transition: 0.3s; }
-    .sidenav a:hover {
-      color: #000; }
-    .sidenav a.active {
-      color: #000;
-      text-decoration: underline; }
-    .sidenav a:hover i {
-      color: #000; }
-    .sidenav a.active i {
-      color: #000;
-      text-decoration: underline; }
-    .sidenav .closebtn {
-      display: none; } }
-/* site */
-body {
-  font-family: "Montserrat", sans-serif; }
-  body .wrapper {
-    margin: 0 auto;
-    width: 80%; }
-  body a {
-    color: inherit;
-    text-decoration: none; }
-    body a:visited {
-      color: inherit; }
-    body a:hover {
-      text-decoration: underline; }
-
-.shade {
-  width: 100%;
-  position: absolute;
-  z-index: -2;
-  left: 0; }
-
-.alignment {
-  margin: 0 auto;
-  padding: 0 45px; }
-
-.btn {
-  width: 110px;
-  text-align: center;
-  border: 2px solid black;
-  border-radius: 10px;
-  padding: 10px; }
-
-#home .hero {
-  background-image: url(../img/heroImage.jpg);
-  background-size: cover;
-  height: 100vh;
-  width: 100%; }
-  #home .hero .shop {
-    position: relative;
-    right: 25%;
-    float: right;
-    top: 60vh;
-    font-size: 34px;
-    width: 225px;
-    padding: 15px; }
-#home .about {
-  height: 100vh;
-  width: 100%; }
-  #home .about h2 {
-    line-height: .2;
-    text-align: center;
-    padding: 120px 0;
-    font-size: 40px; }
-    #home .about h2 span {
-      display: inline-block;
-      position: relative; }
-      #home .about h2 span:before, #home .about h2 span:after {
-        content: "";
-        position: absolute;
-        height: 5px;
-        border-top: 3px solid #ccc;
-        top: 0;
-        width: 550px; }
-      #home .about h2 span:before {
-        right: 100%;
-        margin-right: 15px; }
-      #home .about h2 span:after {
-        left: 100%;
-        margin-left: 15px; }
-  #home .about .content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center; }
-    #home .about .content p {
-      display: block;
-      width: 26%;
-      font-size: 32px;
-      line-height: 1.5; }
-    #home .about .content img {
-      width: 30%; }
+Backtrace:
+/Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss:13:in `breakpoint'
+/Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss:13
+/Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss:5
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:351:in `block in visit_mixin'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:98:in `block in with_mixin'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:98:in `with_mixin'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:349:in `visit_mixin'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:328:in `block (2 levels) in visit_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:328:in `map'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:328:in `block in visit_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:88:in `block in with_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:88:in `with_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:325:in `visit_import'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:115:in `with_frame'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/stack.rb:79:in `with_base'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `map'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:159:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/tree/root_node.rb:20:in `render'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/engine.rb:281:in `render'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/sass_scss.rb:400:in `run'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/sass_scss.rb:63:in `process_result'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/base.rb:52:in `parse'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/lib/sass/exec/base.rb:19:in `parse!'
+/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.23/bin/sass:13:in `<top (required)>'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:18:in `load'
+/Applications/Koala.app/Contents/Resources/app.nw/bin/sass:18:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined mixin 'breakpoint'.\A         on line 13 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss, in `breakpoint'\A         from line 13 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/assets/_body.scss\A         from line 5 of /Users/landoncall/School/DGM-3790/waterBottlesRUs/scss/main.scss\A \A 8: @import 'partials/mixins.scss';\A 9: \A 10: /* site */\A 11: @import 'site/site.scss';\A 12: @import 'site/home.scss';"; }
