--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,12 @@
-
-/* assets */
+/* variables */
 @import 'assets/variables.scss';
-@import 'assets/header.scss';
-@import 'assets/body.scss';
 
 /* partials */
 @import 'partials/mixins.scss';
+
+/* assets */
+@import 'assets/header.scss';
+@import 'assets/body.scss';
 
 /* site */
 @import 'site/site.scss';
