Changes to the shopping page as well as add to cart button

--- a/scss/site/_form.scss
+++ b/scss/site/_form.scss
@@ -70,7 +70,7 @@ div#standard{
     
 }
 button {
-    background: rgb(100,203,114);
+    background: $accent-color;
     color: #fff;
     border: none;
     border-radius: 10px;
