changes to shopping page

--- a/scss/site/_shopping.scss
+++ b/scss/site/_shopping.scss
@@ -23,11 +23,13 @@
 	  width: 100%;
 	  
   }
-	 .add2cart{
+	 .viewDetails{
 		  color: $main-color;
 		 border: 2px solid $accent-color;
-		 margin-left: 4em;
-		 padding: .5em .5em;
+		 margin: auto;
+		 padding: .3em .3em;
+		 text-align: center;
+		 width: 60%;
 		 background: white;
 		 
 
