--- a/scss/site/_site.scss
+++ b/scss/site/_site.scss
@@ -34,7 +34,12 @@ body {
 .btn {
   width: 110px;
   text-align: center;
-  border: 2px solid black;
+  border: 2px solid $emerald;
   border-radius: 10px;
   padding: 10px;
+
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
 }
