--- a/scss/site/_form.scss
+++ b/scss/site/_form.scss
@@ -50,6 +50,10 @@ input {
     padding: 5px;
     /* margin-bottom: 5px; */
     margin: 3px 0 15px;
+	
+	.cartButton{
+		margin-bottom: 16em;
+	}
 }
 .shipping-method {
     border: 1px solid gray;
@@ -73,3 +77,13 @@ div#standard{
 	  }// end of .card info
 }// end of main
 }// end of Shipping
+
+  
+	  .progress{
+		  width: 100%;
+		  margin: 1em auto;
+		  
+		  img{
+			  width: 100%;
+		  }
+	  }
