Add admin pages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,10 @@
 /* assets */
 @import 'assets/header.scss';
 @import 'assets/body.scss';
+@import 'assets/searchBox.scss';
+@import 'assets/styleSignIn.scss';
+@import 'assets/styleInventory.scss';
+@import 'assets/styleUpdateItem.scss';
 
 /* site */
 @import 'site/site.scss';
