--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -55,15 +55,18 @@
       justify-content: space-around;
       align-items: center;
 
-      p {
-        display: block;
-        width: 30%;
-        font-size: 32px;
-        line-height: 1.5;
+      div {
+        width: 50%;
+
+        p {
+          display: block;
+          font-size: 22px;
+          line-height: 1.5;
+        }
       }
 
       img {
-        width: 30%;
+        width: 40%;
       }
     }
   }
