--- a/scss/site/_contact.scss
+++ b/scss/site/_contact.scss
@@ -1,16 +1,16 @@
 body{
 	#contact{
 		.fancy{
-			background-image:url("landscape.jpg");
+			background-image:url("../img/landscape.jpg");
 			background-attachment: fixed;
 			background-position: 41%;
-			
+
 			height: 400px;
 		}
 		.shout {
 		    margin: auto;
 		    display: block;
-		
+
 		    width: 40%;
 		    padding: 20px;
 		    text-align: center;
@@ -24,7 +24,7 @@ body{
 		}
 		form{
 		    display: block;
-		    
+
 		    width: 50%;
 		    border: 1px solid black;
 		    padding: 20px;
@@ -58,7 +58,6 @@ body{
 			    margin: 10px auto;
 			}
 		}
-	
+
 	}
 }
-
